try to fix upload avatar on iphone

--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -213,7 +213,7 @@
     display: flex;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    /*overflow: hidden;*/
     justify-content: center;
     align-items: center;
     position: relative;
